--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,6 +8,10 @@
 		// Update the 'dockerFile' property if you aren't using the standard 'Dockerfile' filename.
 		"dockerfile": "../Dockerfile"
 	},
+	"workspaceFolder": "/app",
+	"remoteEnv": {
+		"PYTHONPATH": "/app"
+	},
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
 
